# HQC_with_addFFT_tches2026

./: README.md  a72_fft.txt  a72_port.txt  gfni_fft.txt  new_bench.sh  x86_fft.txt  x86_hqcteam.txt
benchmarktool/: benchmark.h  hal.c
bitpolymul/gf256t4_avx2gfni/: Makefile
bitpolymul/gf256t4_avx2gfni/avx2gfni/: bc_1_avx2gfni.c  btfy_gfni.c  cidx_to_gf256t4.h  cidx_to_gf256x2.c  dencoder_gf256t4_avx2gfni.c  gf256v_gfni.h  polymul.h  polymul_hqclen.h  polymul_hqclen_avx2pclmul.c
bitpolymul/gf256t4_avx2gfni/tests/: polymulfafft-benchmark.c
bitpolymul/gf256t4_ref/: Makefile
bitpolymul/gf256t4_ref/ref/: bc_1.h  bc_1_ref.c  btfy.h  btfy_ref.c  dencoder_gf256t4.c  gf256.h  gf256_ref.c  polymul.c  polymul_hqclen_ref.c
bitpolymul/gf256t4_ref/tests/: polymul-non2len-test.c  polymul-pow2len-test.c
bitpolymul/gf256x2_neon/: Makefile
bitpolymul/gf256x2_neon/neon/: bc_128.h  bc_128_neon.c  bc_8.h  bitpoly_to_gf256x2_neon.c  btfy_neon.c  cidx_to_gf256x2_neon.h  combine.c  combine.h  gf256.h  ringmul_neon.c
bitpolymul/gf256x2_neon/tests/: polymul-knsub-addfft-test.c  polymul-test.c  polymulcrt-test.c  rings13mul-test.c
bitpolymul/gf256x2_ref/: Makefile
bitpolymul/gf256x2_ref/benchmark/: hal.h
bitpolymul/gf256x2_ref/ref/: bc_8_ref.c  bitpoly_to_gf256x2.h  bitpoly_to_gf256x2_ref.c  btfy.h  cidx_to_gf256x2.h  gf256_ref.c  polymul_hqclen.h
bitpolymul/gf256x2_ref/tests/: polymul-addfft-benchmark.c  ringmul-384-test.c  ringmul-test.c
bitpolymul/gf264_avx2/: Makefile
bitpolymul/gf264_avx2/avx2/: bc_1_avx2.c  cantor_to_gf264.c  dencoder_avx2.c  gf264.h  gf264_aesni.h
bitpolymul/gf264_avx2/tests/: polymul-non2len-test.c  polymulfafft-test.c
bitpolymul/gf264_neon/: Makefile
bitpolymul/gf264_neon/neon/: btfy_consts_2stages.c  btfy_neon.c  cantor_to_gf264.h  dencoder_neon.c  gf264_neon.h  polymul.h  polymul_hqclen_neon.c
bitpolymul/gf264_ref/: Makefile
bitpolymul/gf264_ref/ref/: btfy.c  dencoder.c  gf264.c  polymul_hqclen_ref.c
bitpolymul/gf264_ref/tests/: polymul-pow2len-test.c  polymulfafft-benchmark.c
hqc-fft/: Makefile  README.md
hqc-fft/lib/bitpolymul_a72/: bc_8_neon.c  gf256_neon.c  gf256v_neon.h  polymul.c  polymul.h  polymul_crt_neon.c
hqc-fft/lib/bitpolymul_gfni/: cidx_to_gf256x2_gfni.h  dencoder_gf256t4.h  gf256_gfni.c
hqc-fft/lib/bitpolymul_m1/: cantor_to_gf264_2x.c  dencoder.h  gf264_neon.c  (+1 more)
hqc-fft/tests/: code-test.c  gf2x-test.c  hqc-test.c  hqcpke-test.c
hqc-fft/tests_a72/: code-test.c  gf2x-test.c  hqc-test.c
hqc-fft/tests_m1/: code-test.c  gf2x-test.c  hqc-test.c
hqc_official/: CMakeLists.txt  README.md
hqc_official/tests/unit/: CMakeLists.txt  tests_main.c
(+38 files in other folders)
